k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
    app: my-nginx
spec:
  type: ClusterIP
  selector:
    app: my-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
